# height_mapping

./: .clang-format  .gitignore  README.md
data_generation/: CMakeLists.txt  package.xml
data_generation/config/: data_generation_node.yaml  gt_generation_node.yaml
data_generation/launch/: data_generation.launch  generate_gt.launch
data_generation/launch/rviz/: data_generation.rviz  gt_generation.rviz
data_generation/src/core/: GlobalMapper.cpp  HeightMapper.cpp
data_generation/src/ros/: data_generation_node.cpp  gt_generation_node.cpp  ray_generation_node.cpp
height_map_core/: CMakeLists.txt  package.xml
height_map_core/include/height_map_core/: HeightMap.h  height_map_core.h
height_map_core/src/: HeightMap.cpp
height_map_core/src/height_estimators/: KalmanEstimator.cpp  MovingAverageEstimator.cpp  SimpleMeanEstimator.cpp  StatMeanEstimator.cpp
height_map_loader/: CMakeLists.txt  package.xml
height_map_loader/image/map1/: intensity.yaml
height_map_loader/include/heightmap_loader/: HeightMapLoader.h
height_map_loader/launch/: load_map.launch
height_map_loader/src/: HeightMapLoader.cpp
height_map_msgs/: CMakeLists.txt  package.xml
height_map_msgs/include/height_map_msgs/: HeightMapConverter.h  HeightMapMsgs.h
height_map_msgs/src/: HeightMapConverter.cpp  HeightMapMsgs.cpp
height_map_msgs/srv/: SaveGridMapLayer.srv  SaveLayerToImage.srv
height_map_pcl/: CMakeLists.txt  package.xml
height_map_pcl/include/height_map_pcl/: PCLProcessor.h  cloud_preprocessors.h  pclProcessor.h
height_map_pcl/src/: IntensityCloudProcessor.cpp  PointCloudProcessor.cpp  RGBCloudProcessor.cpp
height_map_ros/: CMakeLists.txt  package.xml
height_map_ros/config/: params.yaml
height_map_ros/include/height_map_ros/: HeightMapping.h
height_map_ros/include/ros_utils/: TransformHandler.h  pointcloud.h  transform.h
height_map_ros/launch/: mapping.launch  run.launch
height_map_ros/src/: HeightMapVisualization.cpp  HeightMapping.cpp  height_map_visualization_node.cpp  height_mapping_node.cpp
height_mapping_data_collection/: CMakeLists.txt  package.xml  test.py
height_mapping_data_collection/config/: params.yaml  visualization.yaml
height_mapping_data_collection/include/height_mapping_data_collection/: DataCollectionNode.h  DataVisualizationNode.h  HeightMapGeneratorNode.h
height_mapping_data_collection/launch/: data_collection.launch  run.launch
height_mapping_data_collection/src/executables/: data_collection_main.cpp  data_visualization_main.cpp
height_mapping_data_collection/src/nodes/: DataCollectionNode.cpp  DataVisualizationNode.cpp
height_mapping_io/: CMakeLists.txt  package.xml
height_mapping_io/config/: params.yaml
height_mapping_io/image/map1/: elevation_diff.yaml  elevation_min.yaml
height_mapping_io/include/: HeightMapLoader.h  HeightMapSaver.h
height_mapping_io/include/height_mapping_io/: HeightMapReader.h  HeightMapWriter.h  KITTIMapWriter.h  KITTIScanReader.h  KITTIScanWriter.h  bin_conversion.h  height_mapping_io.h  pcd_conversion.h  rosbag_conversion.h
height_mapping_io/src/: HeightMapLoader.cpp  HeightMapReader.cpp  HeightMapSaver.cpp  HeightMapWriter.cpp  KITTIMapWriter.cpp  KITTIScanReader.cpp  KITTIScanWriter.cpp  bin_conversion.cpp  height_map_loader_node.cpp  height_map_saver_node.cpp  pcd_conversion.cpp  rosbag_conversion.cpp
height_mapping_ros/: CMakeLists.txt  package.xml
height_mapping_ros/config/: global_mapping_node.yaml  global_mapping_params.yaml  height_mapping_node.yaml  height_mapping_params.yaml  map_visualization.yaml  params.yaml  params_global.yaml  sensor_processor_node.yaml  visualization.yaml
height_mapping_ros/config/include/: heightmap_visualization.yaml
height_mapping_ros/include/height_mapping/: GlobalMapping.h  HeightMapVisualization.h  HeightMapping.h  SensorProcessor.h
height_mapping_ros/include/height_mapping_ros/: CloudTypes.h  DataCollectionNode.h  DataVisualizationNode.h  GlobalMapping.h  GlobalMappingNode.h  HeightMapGeneratorNode.h  HeightMapVisualization.h  HeightMapping.h  HeightMappingNode.h  SensorProcessor.h  SensorProcessorNode.h
height_mapping_ros/include/ros_utils/: TransformHandler.h
height_mapping_ros/include/utils/: PointType.h  TransformHandler.h  pointcloud.h  transform.h
height_mapping_ros/launch/: data_collection.launch  data_visualization.launch  global_mapping.launch  height_map_generator.launch  height_mapping.launch  mapping.launch  run.launch
height_mapping_ros/launch/config/: params.yaml  visualization.yaml
height_mapping_ros/launch/include/: global_mapping.launch  global_mapping.launch.xml  height_mapping.launch  rviz.launch.xml  rviz_global.launch.xml  sensor_processor.launch  sensor_processor.launch.xml
height_mapping_ros/launch/rviz/: data_collection.rviz  global_mapping.rviz  height_mapping.rviz
height_mapping_ros/map_image/map1/: elevation.yaml  elevation_max.yaml  measured_num.yaml  variance.yaml
height_mapping_ros/rviz/: height_mapping.rviz
height_mapping_ros/src/: GlobalMapping.cpp  HeightMapSaver.cpp  HeightMapVisualization.cpp  HeightMapping.cpp  SensorProcessor.cpp  global_mapping_node.cpp  height_map_visualization_node.cpp  height_mapping_node.cpp  heightmap_visualization_node.cpp
height_mapping_ros/src/core/: GlobalMapper.cpp  HeightMapper.cpp
height_mapping_ros/src/executables/: data_collection_main.cpp  data_visualization_main.cpp  global_mapping_main.cpp  height_map_generator_main.cpp  height_mapping_main.cpp  sensor_processor_main.cpp
height_mapping_ros/src/global_mapping/: GlobalMapping.cpp  global_mapping_node.cpp
height_mapping_ros/src/height_map_visualization/: heightmap_visualization_node.cpp
height_mapping_ros/src/height_mapping/: HeightMapping.cpp  height_mapping_node.cpp
height_mapping_ros/src/height_mapping_global/: GlobalMapping.cpp  global_mapping_node.cpp
height_mapping_ros/src/nodes/: DataCollectionNode.cpp  DataVisualizationNode.cpp  GlobalMappingNode.cpp  HeightMapGeneratorNode.cpp  HeightMappingNode.cpp  (+4 more)
height_mapping_utils/: CMakeLists.txt  package.xml
height_mapping_utils/src/: empty.cpp
(+70 files in other folders)
