<?xml version="1.0"?>
<package format="2">
  <name>height_map_msgs</name>
  <version>0.0.0</version>
  <description>The height_map_msgs package</description>
  <maintainer email="tre0430@korea.ac.kr">Ikhyeon Cho</maintainer>
  <license>.</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>height_map_core</depend>
  <depend>grid_map_ros</depend>
  <depend>visualization_msgs</depend>
  <depend>nav_msgs</depend>

  <export>
  </export>
</package>