<?xml version="1.0"?>
<package format="2">
  <name>height_mapping_data_collection</name>
  <version>0.0.0</version>
  <description>Data collection tools for height mapping</description>
  <maintainer email="tre0430@korea.ac.kr">Ikhyeon Cho</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>height_mapping_core</depend>
  <depend>height_mapping_io</depend>
  <depend>height_mapping_utils</depend>
  <depend>grid_map_visualization</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>
  <depend>nav_msgs</depend>
</package>
