<?xml version="1.0"?>
<package format="2">
  <name>height_mapping_utils</name>
  <version>0.0.0</version>
  <description>ROS utilities for height mapping</description>
  <maintainer email="tre0430@korea.ac.kr">Ikhyeon Cho</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
</package> 